bk_ida/gccida/c3/sched_analyze
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1679:22: error: unknown type name 'deps_0'
void  sched_analyze( deps_0 *deps, rtx head, rtx tail) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1689:4: error: expected ';' after expression
rtx v13; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1689:5: error: use of undeclared identifier 'v13'
rtx v13; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1691:4: error: expected ';' after expression
rtx v15; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1691:5: error: use of undeclared identifier 'v15'
rtx v15; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1693:4: error: expected ';' after expression
rtx v17; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1693:5: error: use of undeclared identifier 'v17'
rtx v17; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1695:4: error: expected ';' after expression
rtx sched_before_next_call; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1695:5: error: use of undeclared identifier 'sched_before_next_call'
rtx sched_before_next_call; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1697:4: error: expected ';' after expression
rtx pending_read_insns; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1697:5: error: use of undeclared identifier 'pending_read_insns'
rtx pending_read_insns; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1699:4: error: expected ';' after expression
rtx pending_write_insns; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1699:5: error: use of undeclared identifier 'pending_write_insns'
rtx pending_write_insns; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1701:4: error: expected ';' after expression
rtx last_pending_memory_flush; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1701:5: error: use of undeclared identifier 'last_pending_memory_flush'
rtx last_pending_memory_flush; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1711:6: error: use of undeclared identifier 'listp'
rtx *listp; // [rsp+8h] [rbp-50h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1712:6: error: use of undeclared identifier 'p_pending_write_mems'
rtx *p_pending_write_mems; // [rsp+10h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1714:6: error: use of undeclared identifier 'p_last_function_call'
rtx *p_last_function_call; // [rsp+20h] [rbp-38h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/sched-deps.c:1719:1: error: use of undeclared identifier 'listp'
listp = &deps->pending_read_mems; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sched_analyze/src/obj/sched-deps.o] Error 1
